updating testcase with search for a product

--- a/Results/log.html
+++ b/Results/log.html
@@ -1750,25 +1750,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,5784],[[4,5,6,7,[],[1,17,5765],[],[[8,0,1,7,[9],[1,159,5621],[[0,10,11,0,12,13,0,0,[1,160,1090],[],[[160,2,14]]],[0,15,11,0,16,17,0,0,[1,1250,2352],[],[[1251,2,18]]],[0,19,11,0,20,21,0,0,[1,3602,46],[],[]],[0,22,11,0,23,0,0,0,[1,3649,2131],[],[]]]]],[],[1,1,1,1]]],[],[],[1,1,1,1]];
+window.output["suite"] = [1,2,3,0,[],[1,0,9485],[[4,5,6,7,[],[1,26,9457],[],[[8,0,1,7,[9],[1,223,9258],[[0,10,11,0,12,13,0,0,[1,224,1173],[],[[224,2,14]]],[0,15,11,0,16,17,0,0,[1,1397,2722],[],[[1397,2,18]]],[0,19,11,0,20,21,0,0,[1,4120,82],[],[]],[0,22,11,0,23,24,0,0,[1,4203,215],[],[[4203,2,25]]],[0,26,11,0,27,28,0,0,[1,4418,385],[],[[4418,2,29],[4764,2,30],[4764,2,31]]],[0,19,11,0,20,32,0,0,[1,4804,2481],[],[]],[0,33,11,0,34,0,0,0,[1,7286,2195],[],[]]]]],[],[1,1,1,1]]],[],[],[1,1,1,1]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tests","*C:\\Users\\hovde\\PycharmProjects\\testobject\\Tests","*../Tests","*Webtest","*C:\\Users\\hovde\\PycharmProjects\\testobject\\Tests\\webtest.robot","*../Tests/webtest.robot","*<p>This is some basic info about the whole test suite\x3c/p>","*User can access website","*Test 1","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*about:blank, chrome","*Opening browser 'chrome' to base url 'about:blank'.","*Go To","*<p>Navigates the current browser window to the provided <code>url\x3c/code>.\x3c/p>","*<a href=\"https://www.willys.se/\">https://www.willys.se/\x3c/a>","*Opening url '<a href=\"https://www.willys.se/\">https://www.willys.se/\x3c/a>'","*Wait Until Page Contains","*<p>Waits until <code>text\x3c/code> appears on the current page.\x3c/p>","*Handla billig mat online","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tests","*C:\\Users\\hovde\\PycharmProjects\\testobject\\Tests","*../Tests","*Webtest","*C:\\Users\\hovde\\PycharmProjects\\testobject\\Tests\\webtest.robot","*../Tests/webtest.robot","*<p>This is some basic info about the whole test suite\x3c/p>","*User can access website and search for a product","*Test 1","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*about:blank, chrome","*Opening browser 'chrome' to base url 'about:blank'.","*Go To","*<p>Navigates the current browser window to the provided <code>url\x3c/code>.\x3c/p>","*<a href=\"https://www.willys.se/\">https://www.willys.se/\x3c/a>","*Opening url '<a href=\"https://www.willys.se/\">https://www.willys.se/\x3c/a>'","*Wait Until Page Contains","*<p>Waits until <code>text\x3c/code> appears on the current page.\x3c/p>","*Handla billig mat online","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*id:selenium--search-items-input, kiwi","*Typing text 'kiwi' into text field 'id:selenium--search-items-input'.","*Press Keys","*<p>Simulates the user pressing key(s) to an element or on the active browser.\x3c/p>","*<a href=\"xpath://*[@id=&quot;selenium--search-items-input\">xpath://*[@id=\"selenium--search-items-input\x3c/a>\"], RETURN","*Sending key(s) ('RETURN',) to <a href=\"xpath://*[@id=&quot;selenium--search-items-input\">xpath://*[@id=\"selenium--search-items-input\x3c/a>\"] element.","*Pressing special key RETURN to element.","*Releasing special key RETURN.","*Sökord: kiwi","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:06","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:06","fail":0,"label":"All Tests","pass":1}],[{"elapsed":"00:00:06","fail":0,"label":"Test 1","pass":1}],[{"elapsed":"00:00:06","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":1},{"elapsed":"00:00:06","fail":0,"id":"s1-s1","label":"Tests.Webtest","name":"Webtest","pass":1}]];
+window.output["stats"] = [[{"elapsed":"00:00:09","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:09","fail":0,"label":"All Tests","pass":1}],[{"elapsed":"00:00:09","fail":0,"label":"Test 1","pass":1}],[{"elapsed":"00:00:09","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":1},{"elapsed":"00:00:09","fail":0,"id":"s1-s1","label":"Tests.Webtest","name":"Webtest","pass":1}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1613649928921;
+window.output["baseMillis"] = 1613650644983;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 5792;
+window.output["generated"] = 9500;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
