--- a/Results/report.html
+++ b/Results/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,5784],[[4,5,6,7,[],[1,17,5765],[],[[8,0,1,7,[9],[1,159,5621],[]]],[],[1,1,1,1]]],[],[],[1,1,1,1]];
+window.output["suite"] = [1,2,3,0,[],[1,0,9485],[[4,5,6,7,[],[1,26,9457],[],[[8,0,1,7,[9],[1,223,9258],[]]],[],[1,1,1,1]]],[],[],[1,1,1,1]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tests","*C:\\Users\\hovde\\PycharmProjects\\testobject\\Tests","*../Tests","*Webtest","*C:\\Users\\hovde\\PycharmProjects\\testobject\\Tests\\webtest.robot","*../Tests/webtest.robot","*<p>This is some basic info about the whole test suite\x3c/p>","*User can access website","*Test 1"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tests","*C:\\Users\\hovde\\PycharmProjects\\testobject\\Tests","*../Tests","*Webtest","*C:\\Users\\hovde\\PycharmProjects\\testobject\\Tests\\webtest.robot","*../Tests/webtest.robot","*<p>This is some basic info about the whole test suite\x3c/p>","*User can access website and search for a product","*Test 1"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:06","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:06","fail":0,"label":"All Tests","pass":1}],[{"elapsed":"00:00:06","fail":0,"label":"Test 1","pass":1}],[{"elapsed":"00:00:06","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":1},{"elapsed":"00:00:06","fail":0,"id":"s1-s1","label":"Tests.Webtest","name":"Webtest","pass":1}]];
+window.output["stats"] = [[{"elapsed":"00:00:09","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:09","fail":0,"label":"All Tests","pass":1}],[{"elapsed":"00:00:09","fail":0,"label":"Test 1","pass":1}],[{"elapsed":"00:00:09","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":1},{"elapsed":"00:00:09","fail":0,"id":"s1-s1","label":"Tests.Webtest","name":"Webtest","pass":1}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1613649928921;
+window.output["baseMillis"] = 1613650644983;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 5792;
+window.output["generated"] = 9500;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
